feat: switch to using local op binary

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -4,3 +4,6 @@ hooks:
   read-source-state:
     pre:
       command: ".local/share/chezmoi/.hooks/.install-op.sh"
+# TODO: Fix PATH var
+onepassword:
+  command:".local/bin/op"
