feat: try using op command from home dir

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -6,4 +6,4 @@ hooks:
       command: ".local/share/chezmoi/.hooks/.install-op.sh"
 # TODO: Fix PATH var
 onepassword:
-  command: ".local/bin/op"
+  command: "~/.local/bin/op"
