--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -3,6 +3,6 @@ env:
 hooks:
   read-source-state:
     pre:
-      command: ".local/share/chezmoi/.hooks/.install-op.sh"
+      command: ".local/share/chezmoi/home/.hooks/.install-op.sh"
 onepassword:
   command: "{{ .chezmoi.homeDir }}/.local/bin/op"
