--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -3,6 +3,9 @@ env:
 edit:
   command: "code"
   args: ["--wait"]
+git:
+  autoCommit: true
+  autoPush: true
 hooks:
   read-source-state:
     pre:
