feat: add autoupdate to install packages script

--- a/home/.chezmoiscripts/run_onchange_before_20-install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_20-install-packages.sh.tmpl
@@ -32,6 +32,9 @@ if [ -x ${BREW_PATH} ]; then
     brew bundle cleanup --force --file=/dev/stdin <<EOF
     {{ includeTemplate "packages.def" . -}}
     EOF
+    
+    printf "Info: Started autoupdate.\n"
+    brew autoupdate start 43200 --upgrade --cleanup --immediate --sudo
 
     brew cleanup
     printf "Info: Homebrew package installations completed.\n"
