feat: terminal notifier is no longer needed

--- a/home/.chezmoiscripts/run_onchange_before_20-install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_20-install-packages.sh.tmpl
@@ -33,7 +33,7 @@ if [ -x ${BREW_PATH} ]; then
     {{ includeTemplate "packages.def" . -}}
     EOF
     
-    brew autoupdate start 43200 --upgrade --cleanup --enable-notification --immediate --sudo
+    brew autoupdate start 43200 --upgrade --cleanup --immediate --sudo
     printf "Info: Started autoupdate.\n"
 
     brew cleanup
