test if autoupdate is missing

--- a/home/.chezmoiscripts/run_onchange_before_20-install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_20-install-packages.sh.tmpl
@@ -33,15 +33,15 @@ if [ -x ${BREW_PATH} ]; then
     {{ includeTemplate "packages.def" . -}}
     EOF
     
-    brew autoupdate -h >/dev/null 2>&1
+    brew autoupdatee -h >/dev/null 2>&1
     if [ $? -eq 1 ]; then
         prinf "Warning: Brew autopudate not available. To enable add `homebrew/autoupdate` to taps.\n"
     else
         brew autoupdate start 43200 --upgrade --cleanup --immediate --sudo >/dev/null 2>&1
         if [ $? -eq 1 ]; then
-            printf "Info: Brew autoupdate already running."
+            printf "Info: Brew autoupdate already running.\n"
         else
-            printf "Info: Brew autoupdate started."
+            printf "Info: Brew autoupdate started.\n"
         fi
     fi
 
