fix: aliases typo

--- a/home/dot_config/zsh/dot_aliases.sh.tmpl
+++ b/home/dot_config/zsh/dot_aliases.sh.tmpl
@@ -34,7 +34,7 @@ fi
 if command -v hx &>/dev/null; then
   alias vim='hx'
   alias vi='hx'
-eilf command -v nvim &>/dev/null; then
+elif command -v nvim &>/dev/null; then
   alias vim='nvim'
   alias vi='nvim'
 fi
