fix: aliases typo

--- a/home/dot_config/zsh/dot_aliases.sh.tmpl
+++ b/home/dot_config/zsh/dot_aliases.sh.tmpl
@@ -14,7 +14,7 @@ alias fgrep='grep -F'
 # LSD is a modern replacement for ls
 if command -v lsd &> /dev/null; then
   alias ls='lsd'
-  alias ls='ls -A'
+  alias la='ls -A'
   alias ll='ls -l'
   alias lla='la -l'
   alias ld='ls --depth=1 --tree'
