feat: configure oci cli

--- a/home/dot_config/zsh/dot_exports.sh.tmpl
+++ b/home/dot_config/zsh/dot_exports.sh.tmpl
@@ -43,6 +43,9 @@ export LESSHISTFILE="${XDG_CACHE_HOME}/less/history"
 export LESSHISTSIZE=1000
 export LESSCHARSET="utf-8"
 
+# Oci
+export OCI_CLI_CONFIG_FILE="${XDG_CONFIG_HOME}/oci/config"
+
 # Shell
 export BLOCK_SIZE="human-readable"
 export PAGER="less -isr"
