feat: add taskfile and flux

--- a/home/dot_config/zsh-abbr/user-abbreviations.tmpl
+++ b/home/dot_config/zsh-abbr/user-abbreviations.tmpl
@@ -12,6 +12,12 @@ abbr dcl='docker compose logs'
 abbr dclf='docker compose logs -f'
 abbr dcps='docker compose ps'
 
+# Flux commands
+abbr f='flux'
+
 # Git commands
 abbr -g g='git'
 abbr import-git-aliases -g --prefix "git "
+
+# Taskfile commands
+abbr t='task'
