feat: use correct flux brew and add flux to autocompletions

--- a/home/dot_config/zsh/dot_zshrc.tmpl
+++ b/home/dot_config/zsh/dot_zshrc.tmpl
@@ -168,6 +168,7 @@ setopt SHARE_HISTORY        # Share history between all sessions.
 
 # Cache unpackaged completions and functions
 (( ${+commands[chezmoi]} )) && _evalcache chezmoi completion zsh
+(( ${+commands[flux]} )) && _evalcache flux completion zsh
 (( ${+commands[op]} )) && _evalcache op completion zsh && compdef _op op
 (( ${+commands[thefuck]} )) && _evalcache thefuck --alias
 (( ${+commands[wezterm]} )) && _evalcache wezterm shell-completion --shell zsh
