fix: change api key 1pass name

--- a/home/dot_config/wakatime/private_dot_wakatime.cfg.tmpl
+++ b/home/dot_config/wakatime/private_dot_wakatime.cfg.tmpl
@@ -1,2 +1,2 @@
 [settings]
-api_key = {{ onepasswordRead "op://Private/Wakatime/api_key" }}
+api_key = {{ onepasswordRead "op://Private/WakaTime API/api_key" }}
