feat(zsh): add ShellGPT aliases and functions
 - Added `sgpt` and `sgpt-commit` aliases to `dot_aliases.sh.tmpl` for easier access to ShellGPT commands.
 - Implemented `git_commit_with_sgpt` function in `dot_functions.sh.tmpl` to automate commit message generation using ShellGPT.
 - Created a new symlink for ShellGPT executable in `symlink_sgpt.tmpl`.

--- a/home/dot_config/zsh/dot_aliases.sh.tmpl
+++ b/home/dot_config/zsh/dot_aliases.sh.tmpl
@@ -44,7 +44,7 @@ alias wget='wget --hsts-file="${XDG_CACHE_HOME}/wget-hsts"'
 
 # ShellGPT
 alias sgpt='sgpt 2>/dev/null'
-alias sgpt-diff='git diff | sgpt "Generate git commit message, for my changes, use conventional message formating"'
+alias sgpt-commit='git_commit_with_sgpt'
 
 # Conveniences
 alias zshrc='${=EDITOR} ${ZDOTDIR:-$XDG_CONFIG_HOME}/.zshrc'
