feat(zsh): streamline git_commit_with_sgpt function
 Refactor the git_commit_with_sgpt function in zsh dot_functions.sh to use the current index (staged changes) directly when
 generating commit messages, improving the efficiency of the script.

--- a/home/dot_config/zsh/dot_functions.sh.tmpl
+++ b/home/dot_config/zsh/dot_functions.sh.tmpl
@@ -6,8 +6,7 @@ function br {
 
 # Shell function for ShellGPT to generate commit message
 function git_commit_with_sgpt {
-    local changes=$(git diff HEAD~1)
-    local output=$(sgpt "generate git commit message, use convetional formating\n $changes")
+    local output=$(git diff --cached | sgpt 'generate git commit message, use convetional formating')
 
     echo "$output"
     echo -n "Proceed with commit? (y/n): "
