``` feat: add commit-generator role and update git_commit_with_sgpt function
- Created a new commit-generator role configuration in JSON format.
- Updated the git_commit_with_sgpt shell function to utilize the commit-generator role for generating commit messages.
```

--- a/home/dot_config/zsh/dot_functions.sh.tmpl
+++ b/home/dot_config/zsh/dot_functions.sh.tmpl
@@ -6,7 +6,7 @@ function br {
 
 # Shell function for ShellGPT to generate commit message
 function git_commit_with_sgpt {
-    local output=$(git diff --cached | sgpt 'generate git commit message, use convetional formating')
+    local output=$(git diff --cached | sgpt --role commit-generator)
 
     echo "$output"
     echo -n "Proceed with commit? (y/n): "
