--- a/home/dot_config/zsh/dot_aliases.sh.tmpl
+++ b/home/dot_config/zsh/dot_aliases.sh.tmpl
@@ -44,7 +44,7 @@ alias wget='wget --hsts-file="${XDG_CACHE_HOME}/wget-hsts"'
 
 # ShellGPT
 alias sgpt='sgpt 2>/dev/null'
-alias sgpt-commit='git_commit_with_sgpt'
+alias cmgen='git diff --cached | sgpt --role commit-generator | tee commitmsg.tmp'
 
 # Conveniences
 alias zshrc='${=EDITOR} ${ZDOTDIR:-$XDG_CONFIG_HOME}/.zshrc'
