feat(dotfiles): add awscli, awsume, and gimme-aws-creds to packages
Added awscli, awsume, and gimme-aws-creds to the list of Homebrew packages. Also included an alias for awsume in zsh configuration.

--- a/home/dot_config/zsh/dot_aliases.sh.tmpl
+++ b/home/dot_config/zsh/dot_aliases.sh.tmpl
@@ -30,6 +30,9 @@ if command -v bat &>/dev/null; then
   export MANPAGER="sh -c 'col -bx | bat -l man -p'"
 fi
 
+# Awsume is an aws-cli profile manager
+alias awsume=". awsume"
+
 # Helix
 if command -v hx &>/dev/null; then
   alias vim='hx'
