--- a/home/dot_config/zsh/dot_zshrc.tmpl
+++ b/home/dot_config/zsh/dot_zshrc.tmpl
@@ -172,7 +172,7 @@ setopt SHARE_HISTORY        # Share history between all sessions.
 (( ${+commands[op]} )) && _evalcache op completion zsh && compdef _op op
 (( ${+commands[thefuck]} )) && _evalcache thefuck --alias
 (( ${+commands[wezterm]} )) && _evalcache wezterm shell-completion --shell zsh
-(( ${+commands[zoxide]} )) && _evalcache zoxide init zsh
+(( ${+commands[zoxide]} )) && _evalcache zoxide init --cmd cd zsh
 
 # Test for Bat themes cache file in .cache/bat/themes.bin, if not present, run bat command to cache user themes
 if [ ! -f "${XDG_CACHE_HOME}/bat/themes.bin" ]; then
