refactor(zsh): remove kubie references and update kubeconfig
Removed kubie package and its zsh completions. Updated kubeconfig environment variable to include additional yaml files from the .kube/wbd directory.

--- a/home/dot_config/zsh/dot_exports.sh.tmpl
+++ b/home/dot_config/zsh/dot_exports.sh.tmpl
@@ -37,6 +37,11 @@ export PATH="${GOBIN}:${PATH}"
 # Httpie
 export HTTPIE_CONFIG_DIR="${XDG_CONFIG_HOME}/httpie"
 
+# Kubectl
+kubeconfig=("${HOME}/.kube/config")
+kubeconfig+=($(find "${HOME}/.kube/wbd" -type f -name '*.yaml'))
+export KUBECONFIG="${(j/:/)kubeconfig}"
+
 # Less
 export LESSKEY="${XDG_CONFIG_HOME}/less/lesskey"
 export LESSHISTFILE="${XDG_CACHE_HOME}/less/history"
