chore: align current config

--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -8,4 +8,4 @@ hooks:
     pre:
       command: ".local/share/chezmoi/home/.hooks/.install-op.sh"
 onepassword:
-  command: "{{ .chezmoi.homeDir }}/.local/bin/op"
+  # command: "{{ .chezmoi.homeDir }}/.local/bin/op"
