--- a/home/dot_config/zsh/dot_exports.sh.tmpl
+++ b/home/dot_config/zsh/dot_exports.sh.tmpl
@@ -49,7 +49,8 @@ export LESSHISTSIZE=1000
 export LESSCHARSET="utf-8"
 
 # Oci
-export OCI_CLI_CONFIG_FILE="${XDG_CONFIG_HOME}/oci/config"
+# export OCI_CLI_CONFIG_FILE="${XDG_CONFIG_HOME}/oci/config" ## TODO: Fix when Terraform provider can use is
+export OCI_CLI_CONFIG_FILE="${HOME}/.oci/config"
 
 # Shell
 export BLOCK_SIZE="human-readable"
