probably last push, switching to nix soon

--- a/home/dot_config/exact_git/user.tmpl
+++ b/home/dot_config/exact_git/user.tmpl
@@ -1,6 +1,6 @@
 [user]
   name = Jan Pucilowski
-  email = jan.pucilowski99@gmail.com
+  email = janpuc@proton.me
   signingkey = {{ onepasswordRead "op://SSH/signing_key/public key" }}
 
 [gpg]
